# llm-vehicle-cad

./: .gitignore  README.md  build.ps1  pyproject.toml
src/vehiclecad/: __init__.py
src/vehiclecad/assemblies/: __init__.py  atomic.py  product_tree.py  source_collectors.py
src/vehiclecad/core/: colors.py  coordinates.py  datums.py  materials.py  naming.py  registry.py  units.py
src/vehiclecad/geometry/: __init__.py  bosses.py  curves.py  fillets.py  holes.py  machine_elements.py  patterns.py  primitives.py  ribs.py  sheetmetal.py  solids.py  surfaces.py  transforms.py  tubes.py
src/vehiclecad/interfaces/: __init__.py  clearance_envelopes.py  fastening_interfaces.py  hole_patterns.py  joint_interfaces.py  mount_points.py  subsystem_interfaces.py
src/vehiclecad/parts/: __init__.py
src/vehiclecad/subassemblies/: __init__.py  body_front.py  body_rear.py  body_side.py  brake_module.py  front_axle.py  interior_cockpit.py  powertrain_module.py  rear_axle.py  steering_module.py  thermal_module.py  wheel_corner.py
src/vehiclecad/systems/: __init__.py  architecture_system.py  body_system.py  brake_system.py  chassis_system.py  electrical_system.py  fasteners_interfaces_system.py  interior_system.py  powertrain_system.py  steering_system.py  suspension_system.py  thermal_system.py  wheels_tires_system.py
src/vehiclecad/tools/: __init__.py  audit_atomic_detail.py  audit_functional_mechanisms.py  audit_machine_elements.py  audit_modela_sportscar_reference.py  audit_quality.py  audit_vehicle_contract.py  audit_vmodel_structure.py  build_detailed_vehicle.py  diag_area.py  (+10 more)
(+630 files in other folders)
